<resources>
    <string name="app_name">FinTrack</string>
    <string name="title_activity_transaction_r_v">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="adMob_AppID">ca-app-pub-3964819268651627~7313695268</string>
    <string name="adUnit_ID">ca-app-pub-3940256099942544/2247696110</string>
    <string name="adUnit_BannerHomeID">ca-app-pub-3964819268651627/4188591055</string>
    <string name="adUnit_TestBannerID">ca-app-pub-3940256099942544/6300978111</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <!--<string name="category_names">Rent, Electricity, Water, Food, Clothing, Travel, School, Vehicle, Services</string>-->
    <!-- <string name="account_names">Rent, Electricity, Water, Food, Clothing, Travel, School, Vehicle, Services</string>-->

    <string name="all_data">All data</string>
    <string name="thisyear">This Year</string>
    <string name="this_month">Past 3 Months</string>
    <string name="today">This Week</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_any_notes_you_would_like_to_save">Enter any notes you would like to save.</string>
    <string name="enter_the_date">Select the date</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="edit_a_category">Enter / Edit Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="enter_details">Enter Details</string>
    <string name="start_date">Select start date</string>
    <string name="end_date">Select end date</string>
    <string name="refresh">Refresh</string>
    <string name="select_a_category_for_the_transaction">Select a category for the transaction</string>
    <string name="select_an_account_for_the_transaction">Select an account for the transaction</string>
    <string name="enter_a_start_date">Enter a start date</string>
    <string name="this_month1">This Month</string>
    <string-array name="category_array">
        <item>Rent</item>
        <item>Food</item>
        <item>Clothing</item>
        <item>School</item>
        <item>Utilities</item>
        <item>House Maintenance</item>
        <item>Taxes</item>
        <item>Fuel</item>
        <item>Car Maintenance</item>
        <item>Electricity</item>
        <item>Water</item>
        <item>Cable</item>
        <item>Phone</item>
        <item>Internet</item>
        <item>Medical</item>
        <item>Household Supplies</item>
        <item>Groceries</item>
        <item>Gymn</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="account_array">
        <item>Cash</item>
        <item>Bank</item>
        <item>Mobile</item>
    </string-array>

    <string-array name="material_colors">

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="pieTitle">DETAILS BY CATEGORY</string>
    <string name="barTitle">DETAILS BY PERIOD</string>

    <string name="email">send us an email <a href="mailto: terrificapps@gmail.com">terificapps@gmail.com</a></string>

    <string name="mpandroidchart"><a href="https://github.com/PhilJay/MPAndroidChart">https://github.com/PhilJay/MPAndroidChart</a></string>
    <string name="license">Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

</resources>