<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BarChart">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selectStartDateForBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/start_date"
                android:inputType="date" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selectEndDateForBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/end_date"
                android:inputType="date" />



            <Button
                android:id="@+id/refreshGraphs"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/refresh" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <Button

                android:id="@+id/btn_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/all_data" />

            <Button

                android:id="@+id/btn_2018"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/thisyear"
                 />

            <Button

                android:id="@+id/btn_thisMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/this_month"
                  />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:padding="8dp">

            </com.github.mikephil.charting.charts.BarChart>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>